--- a/RFIDP2P3_Web/Views/Master/MasterGate.cshtml
+++ b/RFIDP2P3_Web/Views/Master/MasterGate.cshtml
@@ -95,10 +95,6 @@
         cursor: pointer;
     }
 
-    .modal-footer {
-        justify-content: flex-start;
-    }
-
     hr {
         background-color: #aaaaaa !important;
     }
@@ -111,7 +107,6 @@
         .k-grid-content {
             height: 45vh;
         }
-
     }
 </style>
 
@@ -131,44 +126,37 @@
                     <div class="modal-body">
                         <div class="panel">
                             <div class="panel-body">
-                                <form class="form-horizontal">
+                                <form class="form-horizontal" id="submitMasterGate">
                                     <div class="flex">
                                         <div class="form-group form-material col-md-6">
-                                            <label class="col-sm-6 control-label">Gate ID</label>
-                                            <div class="col-sm-9">
+                                            <label class="col-sm-10 control-label">Gate ID</label>
+                                            <div class="col-sm-10">
                                                 <input type="text" class="form-control" id="Gate_ID" required />
                                             </div>
                                         </div>
-                                        <div class="form-group form-material col-md-6">
-                                            <label class="col-sm-6 control-label">Gate Group</label>
-                                            <div class="col-sm-9">
-                                                <input type="text" class="form-control" id="Gate_Group" required />
-                                            </div>
-                                        </div>
                                     </div>
                                     <div class="flex">
                                         <div class="form-group form-material col-md-6">
-                                            <label class="col-sm-6 control-label">Shop Code</label>
-                                            <div class="col-sm-9">
-                                                <input type="text" class="form-control" id="Shop_Code" required />
+                                            <label class="col-sm-10 control-label">Shop Code</label>
+                                            <div class="col-sm-10">
+                                                <input class="form-control" id="Shop_Code" required />
+                                            </div>
+                                        </div>
+                                        <div class="form-group form-material col-md-6">
+                                            <label class="col-sm-10 control-label">Gate Group</label>
+                                            <div class="col-sm-10">
+                                                <input class="form-control" id="Gate_Group" required />
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="flex">
-                                        <div class="form-group form-material col-md-6">
-                                            <label class="col-sm-6 control-label">Antena ID</label>
-                                            <div class="col-sm-9">
-                                                <input type="text" class="form-control" id="Antena_ID" required />
-                                            </div>
-                                        </div>
+                                    <br />
+                                    <div>
+                                        <button type="button" class="btn btn-red" id="btnCancel">Cancel</button>
+                                        <input class="btn btn-primary" id="btnSave" value="Save" type="submit" />
                                     </div>
                                 </form>
                             </div>
                         </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-red" id="btnCancel">Cancel</button>
-                        <button type="button" class="btn btn-primary" id="btnSave">Submit</button>
                     </div>
                 </div>
             </div>
@@ -180,7 +168,6 @@
     var AppD = {
         attachEvents: function () {
             var o = this;
-            o.dom.$btnSave.on('click', o.eventHandlers.onClickBtnSave.bind(o));
 
             o.dom.$grid.on('click', '#btnCreate', o.eventHandlers.onClickBtnCreate.bind(o));
             o.dom.$grid.on('click', '#btnExcel', o.eventHandlers.onClickBtnExcel.bind(o));
@@ -192,11 +179,8 @@
             o.dom.$grid = $("#grid");
             o.dom.inputs = {};
             o.dom.inputs.$inputGateID = $("#Gate_ID");
-            o.dom.inputs.$inputGateGroup = $("#Gate_Group");
             o.dom.inputs.$inputShopCode = $("#Shop_Code");
-            o.dom.inputs.$inputAntenaID = $("#Antena_ID");
-
-            o.dom.$btnSave = $("#btnSave");
+            o.dom.inputs.$inputGateGroup = $("#Gate_Group");
         },
         data: {},
         dom: {},
@@ -205,9 +189,8 @@
                 var o = this;
 
                 o.dom.inputs.$inputGateID.val('');
-                o.dom.inputs.$inputGateGroup.val('');
-                o.dom.inputs.$inputShopCode.val('');
-                o.dom.inputs.$inputAntenaID.val('');
+                o.dom.inputs.$inputShopCode.data('kendoDropDownList').value('');
+                o.dom.inputs.$inputGateGroup.data('kendoDropDownList').value('');
 
                 var modal = document.getElementById("myModal");
                 modal.style.display = "block";
@@ -244,14 +227,11 @@
                         }).done(function (data, textStatus, jqXHR) {
                             if (data !== 'success') {
                                 swal.fire('', data, 'error');
-                                console.log(jqXHR);
                                 return;
                             }
                             swal.fire({ title: 'Success', text: 'Data deleted', icon: 'success', timer: 2000, showConfirmButton: false });
                         }).fail(function (jqXHR, textStatus, errorThrown) {
-                            alert(jqXHR.responseText);
                             swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
-                            console.log(jqXHR);
                         }).always(function (data_or_jqXHR, textStatus, jqXHR_or_errorThrown) {
                             o.dom.$grid.data('kendoGrid').dataSource.read();
                         });
@@ -261,53 +241,6 @@
             onClickBtnExcel: function () {
                 var o = this;
                 o.dom.$grid.data('kendoGrid').saveAsExcel();
-            },
-            onClickBtnSave: function () {
-                var o = this;
-                var GateID = o.dom.inputs.$inputGateID.val();
-                var GateGroup = o.dom.inputs.$inputGateGroup.val();
-                var ShopCode = o.dom.inputs.$inputShopCode.val();
-                var AntenaID = o.dom.inputs.$inputAntenaID.val();
-
-                if (GateID !== "") {
-                    swal.fire({
-                        title: "Save?",
-                        icon: 'question',
-                        showCancelButton: true,
-                        confirmButtonText: 'Yes'
-                    }).then((result) => {
-                        if (result.isConfirmed) {
-                            $.ajax({
-                                method: 'post',
-                                headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
-                                url: 'https://localhost:7072/api/MasterGate/INS',
-                                dataType: 'text',
-                                data: JSON.stringify({
-                                    Gate_ID: GateID,
-                                    GateGroup: GateGroup,
-                                    ShopCode: ShopCode,
-                                    UserLogin: 'admin'
-                                })
-                            }).done(function (data, textStatus, jqXHR) {
-                                if (data !== 'success') {
-                                    swal('Error', data, 'error');
-                                    console.log(jqXHR);
-                                    return;
-                                }
-                                var modal = document.getElementById("myModal");
-                                modal.style.display = "none";
-                                swal.fire({ title: 'Success', text: 'Data saved', icon: 'success', timer: 2000, showConfirmButton: false });
-                            }).fail(function (jqXHR, textStatus, errorThrown) {
-                                swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
-                                console.log(jqXHR);
-                            }).always(function (data_or_jqXHR, textStatus, jqXHR_or_errorThrown) {
-                                o.dom.$grid.data('kendoGrid').dataSource.read();
-                            });
-                        }
-                    });
-                } else {
-                    swal.fire('', "Please fill all fields", 'error');
-                }
             }
         },
         init: function () {
@@ -337,18 +270,15 @@
                             }).done(function (data, textStatus, jqXHR) {
                                 try {
                                     var result = JSON.parse(data);
-                                    console.log(result);
                                 }
                                 catch (e) {
                                     swal.fire('Error', 'Error loading grid', 'error');
-                                    console.log(data);
                                     options.success({ data: [] });
                                     return;
                                 }
                                 options.success(result);
                             }).fail(function (jqXHR, textStatus, errorThrown) {
                                 swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
-                                console.log(jqXHR);
                                 options.success({ data: [] });
                             });
                         }
@@ -410,6 +340,117 @@
                     width: 120
                 }],
                 toolbar: $("#template_toolbar").html(),
+            });
+            
+            $("#Shop_Code").kendoDropDownList({
+                template: '<span>#:data.ShopCode#</span>',
+                valueTemplate: '<span>#:data.ShopCode#</span>',
+                footerTemplate: 'Total number of <strong>#: instance.dataSource.total() #</strong> Shop Code found',
+                dataValueField: "ShopCode",
+                optionLabel: "select shop...",
+                dataSource: {
+                    transport: {
+                        read: function (options) {
+                            $.ajax({
+                                method: 'post',
+                                headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
+                                url: 'https://localhost:7072/api/MasterShop/INQ',
+                                dataType: 'text',
+                                data: {}
+                            }).done(function (data, textStatus, jqXHR) {
+                                try {
+                                    var result = JSON.parse(data);
+                                }
+                                catch (e) {
+                                    swal.fire('Error', 'Error loading shop', 'error');
+                                    options.success({ data: [] });
+                                    return;
+                                }
+                                options.success(result);
+                            }).fail(function (jqXHR, textStatus, errorThrown) {
+                                swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
+                                options.success({ data: [] });
+                            });
+                        }
+                    }
+                }
+            }).data("kendoDropDownList");
+
+            $("#Gate_Group").kendoDropDownList({
+                template: '<span>#:data.GateGroup#</span>',
+                valueTemplate: '<span">#:data.GateGroup#</span>',
+                footerTemplate: 'Total number of <strong>#: instance.dataSource.total() #</strong> Gate Group found',
+                dataValueField: "GateGroup",
+                optionLabel: "select gate group...",
+                cascadeFrom: "Shop_Code",
+                dataSource: {
+                    transport: {
+                        read: function (options) {
+                            $.ajax({
+                                method: 'post',
+                                headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
+                                url: 'https://localhost:7072/api/MasterGateGroup/INQ',
+                                dataType: 'text',
+                                data: {}
+                            }).done(function (data, textStatus, jqXHR) {
+                                try {
+                                    var result = JSON.parse(data);
+                                }
+                                catch (e) {
+                                    swal.fire('Error', 'Error loading gate group', 'error');
+                                    options.success({ data: [] });
+                                    return;
+                                }
+                                options.success(result);
+                            }).fail(function (jqXHR, textStatus, errorThrown) {
+                                swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
+                                options.success({ data: [] });
+                            });
+                        }
+                    }
+                }
+            }).data("kendoDropDownList");
+
+            $("#submitMasterGate").submit(function (e) {
+                e.preventDefault(); // avoid to execute the actual submit of the form.
+
+                var GateID = document.getElementById("Gate_ID").value;
+                var GateGroup = document.getElementById("Gate_Group").value;
+                var ShopCode = document.getElementById("Shop_Code").value;
+
+                swal.fire({
+                    title: "Save?",
+                    icon: 'question',
+                    showCancelButton: true,
+                    confirmButtonText: 'Yes'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        $.ajax({
+                            method: 'post',
+                            headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
+                            url: 'https://localhost:7072/api/MasterGate/INS',
+                            dataType: 'text',
+                            data: JSON.stringify({
+                                Gate_ID: GateID,
+                                GateGroup: GateGroup,
+                                ShopCode: ShopCode,
+                                UserLogin: 'admin'
+                            })
+                        }).done(function (data, textStatus, jqXHR) {
+                            if (data !== 'success') {
+                                swal.fire('Error', data, 'error');
+                                return;
+                            }
+                            var modal = document.getElementById("myModal");
+                            modal.style.display = "none";
+                            swal.fire({ title: 'Success', text: 'Data saved', icon: 'success', timer: 2000, showConfirmButton: false });
+                        }).fail(function (jqXHR, textStatus, errorThrown) {
+                            swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
+                        }).always(function (data_or_jqXHR, textStatus, jqXHR_or_errorThrown) {
+                            $("#grid").data("kendoGrid").dataSource.read();
+                        });
+                    }
+                });
             });
         }
     };
