--- a/RFIDP2P3_Web/Views/Master/MasterUserGroup.cshtml
+++ b/RFIDP2P3_Web/Views/Master/MasterUserGroup.cshtml
@@ -99,10 +99,6 @@
 		cursor: pointer;
 	}
 
-	.modal-footer {
-		justify-content: flex-start;
-	}
-
 	hr {
 		background-color: #aaaaaa !important;
 	}
@@ -135,29 +131,29 @@
 				<div class="modal-body">
 					<div class="panel">
 						<div class="panel-body">
-							<form class="form-horizontal">
+							<form class="form-horizontal" id="submitMasterUserGroup">
 								<div class="flex">
 									<div class="form-group form-material col-md-6">
-										<label class="col-sm-9 control-label">User Group ID</label>
-										<div class="col-sm-9">
+										<label class="col-sm-10 control-label">User Group ID</label>
+										<div class="col-sm-10">
 											<input type="text" class="form-control" id="UserGroup_Id" disabled />
 										</div>
 									</div>
 									<div class="form-group form-material col-md-6">
-										<label class="col-sm-9 control-label">User Group</label>
-										<div class="col-sm-9">
+										<label class="col-sm-10 control-label">User Group</label>
+										<div class="col-sm-10">
 											<input type="text" class="form-control" id="UserGroup" required maxlength="50">
 										</div>
 									</div>
 								</div>
-								<div class="clearfix"></div>
+								<br />
+								<div>
+									<button type="button" class="btn btn-red" id="btnCancel">Cancel</button>
+									<input class="btn btn-primary" id="btnSave" value="Save" type="submit" />
+								</div>
 							</form>
 						</div>
 					</div>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-red" id="btnCancel">Cancel</button>
-					<button type="button" class="btn btn-primary" id="btnSave">Submit</button>
 				</div>
 			</div>
 		</div>
@@ -168,7 +164,6 @@
 	var AppD = {
 		attachEvents: function () {
 			var o = this;
-			o.dom.$btnSave.on('click', o.eventHandlers.onClickBtnSave.bind(o));
 
 			o.dom.$grid.on('click', '#btnCreate', o.eventHandlers.onClickBtnCreate.bind(o));
 			o.dom.$grid.on('click', '#btnExcel', o.eventHandlers.onClickBtnExcel.bind(o));
@@ -182,7 +177,6 @@
 			o.dom.inputs = {};
 			o.dom.inputs.$inputUserGroupID = $("#UserGroup_Id");
 			o.dom.inputs.$inputUserGroup = $("#UserGroup");
-			o.dom.$btnSave = $("#btnSave");
 		},
 		data: {},
 		dom: {},
@@ -244,50 +238,6 @@
 			onClickBtnExcel: function () {
 				var o = this;
 				o.dom.$grid.data('kendoGrid').saveAsExcel();
-			},
-			onClickBtnSave: function () {
-				var o = this;
-				var UserGroup_Id = o.dom.inputs.$inputUserGroupID.val();
-				var UserGroup = o.dom.inputs.$inputUserGroup.val();
-
-				if (UserGroup !== "") {
-					swal.fire({
-						title: "Save?",
-						icon: 'question',
-						showCancelButton: true,
-						confirmButtonText: 'Yes'
-					}).then((result) => {
-						if (result.isConfirmed) {
-							$.ajax({
-								method: 'post',
-								headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
-								url: 'https://localhost:7072/api/MasterUserGroup/INS',
-								dataType: 'text',
-								data: JSON.stringify({
-									UserGroup_Id: UserGroup_Id,
-									UserGroup: UserGroup,
-									UserLogin: 'admin'
-								})
-							}).done(function (data, textStatus, jqXHR) {
-								if (data !== 'success') {
-									swal('Error', data, 'error');
-									console.log(jqXHR);
-									return;
-								}
-								var modal = document.getElementById("myModal");
-								modal.style.display = "none";
-								swal.fire({ title: 'Success', text: 'Data saved', icon: 'success', timer: 2000, showConfirmButton: false });
-							}).fail(function (jqXHR, textStatus, errorThrown) {
-								swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
-								console.log(jqXHR);
-							}).always(function (data_or_jqXHR, textStatus, jqXHR_or_errorThrown) {
-								o.dom.$grid.data('kendoGrid').dataSource.read();
-							});
-						}
-					});
-				} else {
-					swal.fire('', "User Group is mandatory!", 'error');
-				}
 			},
 			onClickBtnUpdate: function (e) {
 				var o = this;
@@ -410,6 +360,48 @@
 					width: 950
 				}],
 				toolbar: $("#template_toolbar").html(),
+			});
+
+			$("#submitMasterUserGroup").submit(function (e) {
+                e.preventDefault(); // avoid to execute the actual submit of the form.
+
+				var o = this;
+				var UserGroup_Id = document.getElementById("UserGroup_Id").value;
+				var UserGroup = document.getElementById("UserGroup").value;
+
+				swal.fire({
+					title: "Save?",
+					icon: 'question',
+					showCancelButton: true,
+					confirmButtonText: 'Yes'
+				}).then((result) => {
+					if (result.isConfirmed) {
+						$.ajax({
+							method: 'post',
+							headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
+							url: 'https://localhost:7072/api/MasterUserGroup/INS',
+							dataType: 'text',
+							data: JSON.stringify({
+								UserGroup_Id: UserGroup_Id,
+								UserGroup: UserGroup,
+								UserLogin: 'admin'
+							})
+						}).done(function (data, textStatus, jqXHR) {
+							if (data !== 'success') {
+								swal.fire('Error', data, 'error');
+								console.log(jqXHR);
+								return;
+							}
+							var modal = document.getElementById("myModal");
+							modal.style.display = "none";
+							swal.fire({ title: 'Success', text: 'Data saved', icon: 'success', timer: 2000, showConfirmButton: false });
+						}).fail(function (jqXHR, textStatus, errorThrown) {
+							swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
+						}).always(function (data_or_jqXHR, textStatus, jqXHR_or_errorThrown) {
+                            $("#grid").data("kendoGrid").dataSource.read();
+						});
+					}
+				});
 			});
 		}
 	};
