--- a/RFIDP2P3_Web/Views/Master/MasterTransporter.cshtml
+++ b/RFIDP2P3_Web/Views/Master/MasterTransporter.cshtml
@@ -14,8 +14,6 @@
 	.page-main {
 		margin-top: 100px;
 		margin-left: 30px;
-
-
 	}
 
 	.k-grid {
@@ -25,7 +23,6 @@
 
 	.k-toolbar {
 		background-color: white;
-
 	}
 
 	.k-grid-content {
@@ -98,10 +95,6 @@
 		cursor: pointer;
 	}
 
-	.modal-footer {
-		justify-content: flex-start;
-	}
-
 	hr {
 		background-color: #aaaaaa !important;
 	}
@@ -114,47 +107,42 @@
 		.k-grid-content {
 			height: 45vh;
 		}
-
 	}
 </style>
 
 <div class="page-main">
-
 	<div class="page-content">
 		<h3>Master Transporter</h3>
 		<hr>
-
 		<div id="grid" style="margin-top:5px; margin-bottom:5px;"></div>
-
 		<!-- The Modal -->
 		<div id="myModal" class="modal">
-
 			<!-- Modal content -->
 			<div class="modal-content">
-
 				<div class="" role="document">
 					<div class="modal-header">
-						<h4 class="modal-title" id="myModalLabel">Add New Master Transporter</h4>
+						<h4 class="modal-title" id="myModalLabel">Add New Transporter</h4>
 					</div>
 					<div class="modal-body">
 						<div class="panel">
 							<div class="panel-body">
-								<form class="form-horizontal">
+								<form class="form-horizontal" id="submitMasterTransporter">
 									<div class="flex">
 										<div class="form-group form-material col-md-6">
-											<label class="col-sm-6 control-label">Transporter</label>
-											<div class="col-sm-9">
+											<label class="col-sm-10 control-label">Transporter</label>
+											<div class="col-sm-10">
 												<input type="text" class="form-control" id="Transporter" required />
 											</div>
 										</div>
 									</div>
+									<br />
+									<div>
+										<button type="button" class="btn btn-red" id="btnCancel">Cancel</button>
+										<input class="btn btn-primary" id="btnSave" value="Save" type="submit">
+									</div>
 								</form>
 							</div>
 						</div>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-red" id="btnCancel">Cancel</button>
-						<button type="button" class="btn btn-primary" id="btnSave">Submit</button>
 					</div>
 				</div>
 			</div>
@@ -167,7 +155,6 @@
 	var AppD = {
 		attachEvents: function () {
 			var o = this;
-			o.dom.$btnSave.on('click', o.eventHandlers.onClickBtnSave.bind(o));
 
 			o.dom.$grid.on('click', '#btnCreate', o.eventHandlers.onClickBtnCreate.bind(o));
 			o.dom.$grid.on('click', '#btnExcel', o.eventHandlers.onClickBtnExcel.bind(o));
@@ -179,7 +166,6 @@
 			o.dom.$grid = $("#grid");
 			o.dom.inputs = {};
 			o.dom.inputs.$inputTransporter = $("#Transporter");
-			o.dom.$btnSave = $("#btnSave");
 		},
 		data: {},
 		dom: {},
@@ -187,6 +173,7 @@
 			onClickBtnCreate: function () {
 				var o = this;
 				o.dom.inputs.$inputTransporter.val('');
+
 				var modal = document.getElementById("myModal");
 				modal.style.display = "block";
 				window.onclick = function (event) {
@@ -222,14 +209,11 @@
 						}).done(function (data, textStatus, jqXHR) {
 							if (data !== 'success') {
 								swal.fire('', data, 'error');
-								console.log(jqXHR);
 								return;
 							}
 							swal.fire({ title: 'Success', text: 'Data deleted', icon: 'success', timer: 2000, showConfirmButton: false });
 						}).fail(function (jqXHR, textStatus, errorThrown) {
-							alert(jqXHR.responseText);
 							swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
-							console.log(jqXHR);
 						}).always(function (data_or_jqXHR, textStatus, jqXHR_or_errorThrown) {
 							o.dom.$grid.data('kendoGrid').dataSource.read();
 						});
@@ -239,47 +223,6 @@
 			onClickBtnExcel: function () {
 				var o = this;
 				o.dom.$grid.data('kendoGrid').saveAsExcel();
-			},
-			onClickBtnSave: function () {
-				var o = this;
-				var Transporter = o.dom.inputs.$inputTransporter.val();
-				if (Transporter !== "") {
-					swal.fire({
-						title: "Save?",
-						icon: 'question',
-						showCancelButton: true,
-						confirmButtonText: 'Yes'
-					}).then((result) => {
-						if (result.isConfirmed) {
-							$.ajax({
-								method: 'post',
-								headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
-								url: 'https://localhost:7072/api/MasterTransporter/INS',
-								dataType: 'text',
-								data: JSON.stringify({
-									Transporter: Transporter,
-									UserLogin: '00001'
-								})
-							}).done(function (data, textStatus, jqXHR) {
-								if (data !== 'success') {
-									swal('Error', data, 'error');
-									console.log(jqXHR);
-									return;
-								}
-								var modal = document.getElementById("myModal");
-								modal.style.display = "none";
-								swal.fire({ title: 'Success', text: 'Data saved', icon: 'success', timer: 2000, showConfirmButton: false });
-							}).fail(function (jqXHR, textStatus, errorThrown) {
-								swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
-								console.log(jqXHR);
-							}).always(function (data_or_jqXHR, textStatus, jqXHR_or_errorThrown) {
-								o.dom.$grid.data('kendoGrid').dataSource.read();
-							});
-						}
-					});
-				} else {
-					swal.fire('', "Trasnporter is mandatory!", 'error');
-				}
 			}
 		},
 		init: function () {
@@ -309,18 +252,15 @@
 							}).done(function (data, textStatus, jqXHR) {
 								try {
 									var result = JSON.parse(data);
-									console.log(result);
 								}
 								catch (e) {
 									swal.fire('Error', 'Error loading grid', 'error');
-									console.log(data);
 									options.success({ data: [] });
 									return;
 								}
 								options.success(result);
 							}).fail(function (jqXHR, textStatus, errorThrown) {
 								swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
-								console.log(jqXHR);
 								options.success({ data: [] });
 							});
 						}
@@ -370,6 +310,44 @@
 					width: 950
 				}],
 				toolbar: $("#template_toolbar").html(),
+			});
+
+			$("#submitMasterTransporter").submit(function (e) {
+				e.preventDefault(); // avoid to execute the actual submit of the form.
+
+				var Transporter = document.getElementById("Transporter").value;
+
+				swal.fire({
+					title: "Save?",
+					icon: 'question',
+					showCancelButton: true,
+					confirmButtonText: 'Yes'
+				}).then((result) => {
+					if (result.isConfirmed) {
+						$.ajax({
+							method: 'post',
+							headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
+							url: 'https://localhost:7072/api/MasterTransporter/INS',
+							dataType: 'text',
+							data: JSON.stringify({
+								Transporter: Transporter,
+								UserLogin: 'admin'
+							})
+						}).done(function (data, textStatus, jqXHR) {
+							if (data !== 'success') {
+								swal.fire('Error', data, 'error');
+								return;
+							}
+							var modal = document.getElementById("myModal");
+							modal.style.display = "none";
+							swal.fire({ title: 'Success', text: 'Data saved', icon: 'success', timer: 2000, showConfirmButton: false });
+						}).fail(function (jqXHR, textStatus, errorThrown) {
+							swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
+						}).always(function (data_or_jqXHR, textStatus, jqXHR_or_errorThrown) {
+							$("#grid").data("kendoGrid").dataSource.read();
+						});
+					}
+				});
 			});
 		}
 	};
